--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
         </div>
     </div>    
         <div class="bio" id="intro">
+            <!--Introduction -->
             <div class="sec" >           
                 <center>            
             <img src="maharjan.jpg" class="image" style="width:300px;height:300px"><br><text class="bio">MY BIO</text><br><br>
