--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
                 </center>       
             </div>
             <div class="education">
+                <!--Education -->
                 <div class="mis">
                 <center>        
                     <h1>Modern Indian School</h1><br>
