--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
             </div>
             </div>
             <div class="contact" id="contact">
+                <!--Contact Section -->
                 <center><b>Contact Us</b></center>
             </div>
                 <div class="Contact-box">
